# kinic-cli

./: .gitignore  Cargo.toml  README.md  dfx.json  logo.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  promplt.md  pyproject.toml  tsconfig.base.json
apps/kinic-portal/: next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
crates/kinic-amount/: Cargo.toml
crates/kinic-core/: Cargo.toml
docs/: cli.md  external-tools.md  mcp.md  tui.md
python/examples/: insert_pdf_file.py
python/kinic_py/: __init__.py  memories.py
rust/: agent.rs  app.rs  cli.rs  cli_defs.rs  cli_policy.rs  create_domain.rs  embedding.rs  embedding_config.rs  insert_service.rs  ledger.rs  lib.rs  local_chunking.rs  local_embedding.rs  memory_client_builder.rs  operation_timeout.rs  preferences.rs  prompt_utils.rs  python.rs  tui_app.rs  tui_config.rs
rust/clients/: launcher.rs  memory.rs
rust/commands/: ask_ai.rs  capabilities.rs  config.rs  config_confirm.rs  create.rs  export_all.rs  helpers.rs  insert.rs  insert_pdf.rs  insert_raw.rs  list.rs  mod.rs  prefs.rs  rename.rs  reset.rs  search.rs  search_raw.rs  (+4 more)
samples/: agentic_commerce_security.json  blog-icme-io-a-review-on-floating-points-in-zero-knowledge-proof-systems.json  blog-icme-io-agentic-commerce-the-hack-waiting-to-happen.json  blog-icme-io-approaching-constant-the-race-for-the-fastest-zero-knowledge-proof-system.json  blog-icme-io-folding-schemes-in-the-lattice-setting-pay-per-bit-and-ntts.json  blog-icme-io-fully-homomorphic-encryption.json  blog-icme-io-introducing-novanet.json  blog-icme-io-memory-consistency-checks-in-zk-vm.json  blog-icme-io-minimal-space-maximum-pace-how-memory-efficient-zero-knowledge-proofs-work.json  blog-icme-io-parallel-proving-and-next-generation-decentralized-prover-marketplaces.json  blog-icme-io-pick-prove-profit-the-nivc-singularity-2.json  blog-icme-io-proof-composition-with-zkvm-runawayzk.json  blog-icme-io-secure-and-compliant-ai-the-role-of-zero-knowledge-proofs.json  blog-icme-io-small-fields-for-zero-knowledge.json  blog-icme-io-succinct-verification-the-key-to-ai.json  blog-icme-io-sumcheck-good-lookups-good-jolt-good-particularly-for-zero-knowledge-machine-learning.json  blog-icme-io-the-cost-of-recursion-explorations-in-the-state-of-the-art-of-foreign-arithmetic.json  blog-icme-io-the-definitive-guide-to-zkml-2025.json  blog-icme-io-the-lookup-singularity.json  blog-icme-io-trustless-agents-cant-work-without-trustless-agentic-memory.json  blog-icme-io-trustless-agents-with-zkml.json  blog-icme-io-verifiable-ai-memory-when-ai-remembers-who-controls-the-truth.json  blog-icme-io-verifiable-ai-moving-from-a-black-box-to-a-glass-house.json  blog-icme-io-why-defi-needs-zkps.json  blog-icme-io-zk-prover-networks-want-your-data-dont-give-it-to-them-2.json  blog-icme-io-zkgpu-on-the-state-of-the-art-for-verifiable-compute-of-gpu-execution-2.json  blog-icme-io-zkwasm-expanding-the-horizons-of-privacy-preserving-technologies-with-supernova-zkp-scheme.json  kinic_context_market.json  memorty_event_script.json  www-kinic-io-blog-joltx-reaching-for-sota-in-zero-knowledge-machine-learning-zkml.json  www-kinic-io-blog-kinic-context-market-make-money-from-what-you-already-know.json
scripts/: mint.sh  seed_local_search_demo.sh  setup.sh
skills/: SKILL.md
src/: cli.rs  lib.rs
tests/: kinic_cli_capabilities.rs  kinic_cli_commands.rs  kinic_cli_identity.rs  kinic_cli_prefs.rs  kinic_cli_tui.rs
tui/: Cargo.toml
tui/crates/tui-kit/: Cargo.toml
tui/crates/tui-kit-host/: Cargo.toml
tui/crates/tui-kit-host/src/: clipboard.rs  form_tab_flow.rs  form_tab_flow_tests.rs  lib.rs  lib_tests.rs  picker.rs  runtime_loop.rs  runtime_loop_tests.rs  settings.rs  settings_tests.rs  terminal.rs  terminal_tests.rs
tui/crates/tui-kit-model/: Cargo.toml
tui/crates/tui-kit-model/src/: lib.rs
tui/crates/tui-kit-render/: Cargo.toml
tui/crates/tui-kit-render/src/: lib.rs
tui/crates/tui-kit-render/src/ui/: content.rs  context_view.rs  inspector.rs  mod.rs  model.rs  search.rs  splash.rs
tui/crates/tui-kit-render/src/ui/app/: header.rs  layout.rs  list.rs  mod.rs  overlays.rs  render_root.rs  right_panel.rs  special_tabs.rs  status.rs  types.rs  ui_builder.rs  ui_state.rs
tui/crates/tui-kit-render/src/ui/app/screens/: mod.rs
tui/crates/tui-kit-render/src/ui/app/screens/create/: mod.rs  tests.rs
tui/crates/tui-kit-render/src/ui/app/screens/insert/: mod.rs
tui/crates/tui-kit-render/src/ui/app/screens/memories/: chat_panel.rs  content_panel.rs  context_list_panel.rs  cursor.rs  detail_panel.rs  items_panel.rs  layout.rs  mod.rs  search_panel.rs
tui/crates/tui-kit-render/src/ui/app/screens/placeholder/: mod.rs
tui/crates/tui-kit-render/src/ui/app/screens/settings/: mod.rs
tui/crates/tui-kit-render/src/ui/app/shared/: header.rs  layout.rs  mod.rs  status.rs
tui/crates/tui-kit-render/src/ui/theme/: mod.rs
tui/crates/tui-kit-runtime/: Cargo.toml
tui/crates/tui-kit-runtime/examples/: generic_provider.rs
tui/crates/tui-kit-runtime/src/: chat_commands.rs  form_descriptor.rs  input_rules.rs  kinic_tabs.rs  lib.rs
tui/crates/tui-kit/src/: lib.rs
tui/examples/: tui_kit_ui.rs
tui/examples/kinic/: adapter.rs  main.rs  provider.rs
tui/examples/mail/: adapter.rs  main.rs  provider.rs
tui/examples/rust_inspector/: adapter.rs  main.rs  provider.rs
tui/examples/rust_inspector/app/: intent_domain.rs  interaction.rs  mod.rs  render_adapter.rs  state.rs  tab.rs
tui/examples/rust_inspector/config/: settings.rs
tui/examples/rust_inspector/domain_rust/: mod.rs
tui/examples/rust_inspector/domain_rust/analyzer/: dependency.rs  parser.rs  registry.rs
tui/examples/rust_inspector/error/: mod.rs
tui/examples/task/: adapter.rs  main.rs  provider.rs
tui/src/: adapter.rs  branding.rs  bridge.rs  lib.rs  main.rs  provider.rs  settings.rs  settings_tests.rs  ui_config.rs
tui/src/provider/: tests.rs
tui/src/provider/tests/: insert_submit.rs  live_browser.rs  search.rs  settings.rs  snapshot.rs
tui/tests/: tui_cli.rs
(+95 files in other folders)
