[package]
name = "tui-kit-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Domain-agnostic core interfaces and state machine contracts for tui-kit"

[lib]
name = "tui_kit_runtime"
path = "src/lib.rs"

[dependencies]
tui-kit-model = { path = "../tui-kit-model" }
