[package]
name = "tui-kit-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "Shared runtime state and state machine contracts for the Kinic tui-kit stack"

[lib]
name = "tui_kit_runtime"
path = "src/lib.rs"

[dependencies]
candid = "0.10.20"
kinic-amount = { path = "../../../crates/kinic-amount" }
tui-kit-model = { path = "../tui-kit-model" }
